# new_cicd

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
client_desktop/: CMakeLists.txt
client_desktop/include/: hello-client.h
client_desktop/src/: hello-client.cpp  main.cpp
cmake/: PlatformConfig.cmake  Toolchain-GCC.cmake  Toolchain-MSVC.cmake  Toolchain-MinGW.cmake
control/: CMakeLists.txt
control/include/: main.h
control/src/: main.cpp
service/: CMakeLists.txt
service/include/: hellod.h
service/src/: hellod.cpp
vcpkg-configs/: client_desktop.json  common.json  control.json  service.json
